--- a/website/src/components/Navbar/Navbar.css
+++ b/website/src/components/Navbar/Navbar.css
@@ -1,6 +1,7 @@
 .navbar {
     display: flex;
-    min-height: 50px;
+    min-height: 60px;
     justify-content: space-between;
     align-items: center;
+    margin: 0px 50px;
 }
