--- a/website/src/components/App/App.css
+++ b/website/src/components/App/App.css
@@ -1,7 +1,8 @@
-
-*{
+.app {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
   font-family: 'PT Sans', sans-serif;
+  min-width: 100vw;
+  min-height: 100vh;
+  background: var(--primary-color-1);
 }
+
