--- a/website/src/components/Navbar/Navbar.css
+++ b/website/src/components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: var(--main-primary-color);
+    background: linear-gradient(var(--primary-color-5), var(--primary-color-3));
     height: 80px;
     display: flex;
     justify-content: center;
