--- a/website/src/components/Footer/Footer.css
+++ b/website/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-    position: absolute;
-    bottom: 40px;
-
+    background-color: var(--light-grey);
+    min-height: 250px;
+    padding-top: 20px;
 }
