--- a/website/src/components/Home/Home.css
+++ b/website/src/components/Home/Home.css
@@ -1,3 +1,11 @@
-.map {
-    height: 500px;
+h1 {
+    font-weight: 700;
+}
+.text-align-center {
+    text-align: center;
+}
+iframe {
+    border: none;
+    width: 100%;
+    height: 600px;
 }
