--- a/website/src/components/Landing/Landing.css
+++ b/website/src/components/Landing/Landing.css
@@ -1,8 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+
 .landing {
     margin: 0px 100px;
 }
 
 .section {
+    font-family: 'Roboto';
+    font-weight: 300;
+    margin-top: 30px;
     min-height: 250px;
-    min-width: 100%;
+    width: 100%;
 }
