--- a/website/src/components/Landing/Landing.css
+++ b/website/src/components/Landing/Landing.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 
 .landing {
+    box-sizing: border-box;
     margin: 0px 100px;
 }
 
