--- a/website/src/components/AboutUs/AboutUs.css
+++ b/website/src/components/AboutUs/AboutUs.css
@@ -1,14 +1,28 @@
 .about-us {
-    margin: 80px 0px 50px 0px;
-    padding: 0px 50px;
-}
-
-.about-us-header1 {
-    font-weight: 300;
+    background-color: #f2e9ff;
+    padding: 100px 20px;
     text-align: center;
-    margin-bottom: 30px 0px;
-}
-
-.explanation {
-    font-size: 20px;
-}
+  }
+  
+  .about-us-header1 {
+    font-family: 'Roboto', sans-serif;
+    font-size: 48px;
+    font-weight: bold;
+    color: #3d3d3d;
+    margin-bottom: 30px;
+  }
+  
+  .explanation {
+    font-family: 'Poppins', sans-serif;
+    font-size: 24px;
+    line-height: 1.5;
+    color: #5c5c5c;
+    margin: 0 auto;
+    max-width: 800px;
+  }
+  
+  .relaxed-text {
+    font-family: 'Fredoka One', cursive;
+    color: #d08bff;
+  }
+  
