--- a/website/src/components/Home/Home.css
+++ b/website/src/components/Home/Home.css
@@ -1,32 +1,75 @@
-.home-header1 {
+/* Home.css */
+.home {
+    font-family: Arial, sans-serif;
+    width: auto;
+    margin: 0 auto;
+  }
+  
+  .header {
     text-align: center;
-    font-weight: 300;
-}
-.home-header2 {
+    color: #ffffff;
+  }
+  
+  .header h1 {
+    font-size: 35px;
+    color: #4c427a;
+    padding-top: 50px;
+  }
+  
+  .search-section {
+    background-color: #f1f1f9;
+    padding: 20px;
     text-align: center;
-    font-weight: 300;
-}
-
-.search-bar input {
-    border: 1px solid var(--primary-color-5);
+  }
+  
+  .search-section h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
+    color: #4c427a;
+  }
+  
+  .search-form {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 30%;
+    gap: 10px;
+  }
+  
+  .search-form input {
+    flex-grow: 1;
+    padding: 8px 12px;
+    font-size: 16px;
+    border: 1px solid #cccccc;
     border-radius: 4px;
-    text-align: center;
-    margin-bottom: 20px;
-    height: 25px;
-    width: 100%;
-    background-color: var(--white);
-}
-.search-bar input::placeholder {
-    color: var(--primary-color-5);
-}
-
-.search-bar input:focus {
-    color: var(--primary-color-5);
-    outline:none;
-}
-
-.map-container {
+  }
+  
+  .search-form button {
+    padding: 8px 16px;
+    font-size: 16px;
+    background-color: #6f60b6;
+    color: #ffffff;
     border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .search-form button:hover {
+    background-color: #5c4f9d;
+  }
+  
+  .map-section {
+    position: relative;
+    padding-bottom: 56.25%;
+    margin-top: 20px;
+    margin: 0 50px;
+  }
+  
+  .map-container {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 600px;
-}
+    height: 100%;
+  }
+  
