--- a/website/src/components/Home/Home.css
+++ b/website/src/components/Home/Home.css
@@ -1,75 +1,85 @@
-/* Home.css */
 .home {
-    font-family: Arial, sans-serif;
-    width: auto;
-    margin: 0 auto;
-  }
-  
-  .header {
-    text-align: center;
-    color: #ffffff;
-  }
-  
-  .header h1 {
-    font-size: 35px;
-    color: #4c427a;
-    padding-top: 50px;
-  }
-  
-  .search-section {
-    background-color: #f1f1f9;
-    padding: 20px;
-    text-align: center;
-  }
-  
-  .search-section h2 {
-    font-size: 24px;
-    margin-bottom: 10px;
-    color: #4c427a;
-  }
-  
-  .search-form {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 30%;
-    gap: 10px;
-  }
-  
-  .search-form input {
-    flex-grow: 1;
-    padding: 8px 12px;
-    font-size: 16px;
-    border: 1px solid #cccccc;
-    border-radius: 4px;
-  }
-  
-  .search-form button {
-    padding: 8px 16px;
-    font-size: 16px;
-    background-color: #6f60b6;
-    color: #ffffff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .search-form button:hover {
-    background-color: #5c4f9d;
-  }
-  
-  .map-section {
-    position: relative;
-    padding-bottom: 56.25%;
-    margin-top: 20px;
-    margin: 0 50px;
-  }
-  
-  .map-container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
-  
+  font-family: Arial, sans-serif;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: auto 1fr;
+  gap: 10px;
+  height: 100vh;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.header {
+  grid-column: 1 / 3;
+  text-align: center;
+  color: #ffffff;
+}
+
+.header h1 {
+  font-size: 35px;
+  color: #4c427a;
+  padding-top: 50px;
+}
+
+.search-section {
+  background-color: #f1f1f9;
+  padding: 20px;
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+  overflow: auto;
+}
+
+.search-section h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+  color: #4c427a;
+}
+.search-section p{
+  font-size: 24px;
+}
+
+.search-form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.search-form input {
+  padding: 8px 12px;
+  font-size: 16px;
+  border: 1px solid #cccccc;
+  border-radius: 4px;
+}
+
+.search-form button, 
+.search-section button { 
+  padding: 8px 16px;
+  font-size: 16px;
+  background-color: #6f60b6;
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.search-form button:hover, 
+.search-section button:hover { 
+  background-color: #5c4f9d;
+}
+
+.map-section {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+}
+
+.map-container {
+  width: 100%;
+  height: 100%;
+}
+
+.map-section p {
+  text-align: center;
+  font-style: italic;
+  color: #888;
+}
